[package]
name = "core-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"], optional = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = { version = "0.15", optional = true }

[features]
ssr = ["dep:sqlx", "dep:dotenvy"]
