[package]
name = "importer"
version = "0.1.0"
edition = "2021"

[dependencies]
core-db = { path = "../core" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls"] }
